--- a/style.css
+++ b/style.css
@@ -8,17 +8,17 @@ body {
 
 .container {
     position: relative;
-    top: 200px;
     margin: 0 auto;
-    max-width: 1700px;
-    max-height: 75vh;
-    overflow: scroll;
+    top: 50px;
+    max-width: 90vw;
+    max-height: 80vh;
+    overflow: auto;
 }
 
 #pokedex {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 10px;
+    grid-gap: 0px;
     padding-inline-start: 0;
 
 
@@ -26,7 +26,8 @@ body {
 /* Cards style  */
 .card {
     list-style: none;
-    max-width: 250px;
+    max-width: 300px;
+    max-height: 150px;
     padding: 10px;
     /* background-color: #d6d4d4de; */
     color: #222;
@@ -40,7 +41,7 @@ body {
 .card-title {
     text-transform: capitalize;
     margin-bottom: 0px;
-    font-size: 27px;
+    font-size: 19px;
     font-weight: normal;
 }
 
@@ -51,14 +52,15 @@ body {
 }
 
 .card-image {
-    height: 100px;
+    height: 90px;
 }
 
 /* button style */
 
 .button {
     position: absolute;
-    left: 50%;
+    left: 46%;
+    margin: 0 auto;
     transform: translate(-50%);
     bottom: 0px;
     width: 200px;
@@ -112,10 +114,53 @@ body {
     }
 }
 
-/*.hide {*/
-/*    display: none;*/
-/*}*/
+/*Searchbar style*/
 
+.search-container{
+    position: relative;
+    left: -50px;
+    top: 100px;
+    width: 290px;
+    display: block;
+    margin: 0 auto;
+    border-radius: 150px;
+}
+
+input#search-bar{
+    margin: 0 auto;
+    border-radius: 50px;
+    width: 100%;
+    height: 45px;
+    padding: 0px 60px;
+    font-size: 1rem;
+    border: 1px solid #D0CFCE;
+    outline: none;
+&:focus{
+     border: 1px solid #bf0000;
+     transition: 0.35s ease;
+     color: #bf0000;
+&::-webkit-input-placeholder{
+     transition: opacity 0.45s ease;
+     opacity: 0;
+ }
+&::-moz-placeholder {
+     transition: opacity 0.45s ease;
+     opacity: 0;
+ }
+&:-ms-placeholder {
+     transition: opacity 0.45s ease;
+     opacity: 0;
+ }
+}
+}
+
+.search-icon{
+    position: relative;
+    width: 75px;
+    height: 75px;
+    top: -62px;
+
+}
 
 /* Logo styled */
 
