--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    background-color: #f8e5e5;
+}
+
 body {
 
     margin: 0;
@@ -28,22 +32,32 @@ body {
 .card {
     list-style: none;
     width: 300px;
-    height: 150px;
-    padding: 10px;
-    background-color: #d6d4d4de;
+    height: 250px;
     color: #222;
     text-align: center;
 }
 
 .card:hover {
-    background-color: #50514f;
+    background-color: white;
 }
 
 .card-title {
+    position: relative;
+    top: -30px;
+    left: 0px;
+    width: 100px;
     text-transform: capitalize;
     margin-bottom: 0px;
     font-size: 19px;
     font-weight: normal;
+}
+
+.card-subtitle-wrapper {
+    position: relative;
+    top: -70px;
+    left: 170px;
+    width: 50px;
+
 }
 
 .card-subtitle {
@@ -51,9 +65,35 @@ body {
     color: #fa6603;
     font-weight: lighter;
 }
+.card-id {
+    color: #D0CFCE;
+    font-weight: 500;
+
+
+}
+.card-id-wrapper {
+    position: relative;
+    top: -15px;
+    left: 10px;
+    width: 50px;
+
+}
+
+.card-image-wrapper{
+    position: relative;
+    background-color: #c0c4bd;
+    width: 280px;
+    height: 200px;
+    border-radius: 15%;
+}
 
 .card-image {
-    height: 90px;
+    position: absolute;
+    left: 28%;
+    top: 18%;
+    height: 120px;
+    width: 120px;
+    border-radius: 10%;
 }
 
 /* button style */
@@ -121,7 +161,7 @@ body {
     position: relative;
     left: -50px;
     top: 50px;
-    width: 290px;
+    width: 390px;
     display: block;
     margin: 0 auto;
     border-radius: 150px;
@@ -131,7 +171,7 @@ input#search-bar{
     margin: 0 auto;
     border-radius: 50px;
     width: 100%;
-    height: 45px;
+    height: 35px;
     padding: 0px 60px;
     font-size: 1rem;
     border: 1px solid #D0CFCE;
@@ -159,9 +199,118 @@ input#search-bar{
     position: relative;
     width: 75px;
     height: 75px;
-    top: -62px;
+    top: -56px;
 
 }
+
+.filter-list{
+    position: relative;
+    width: 25px;
+    height: 25px;
+    top: -80px;
+    left: 395px;
+
+}
+
+.filter-list:hover{
+    opacity: 0.3;
+}
+
+#filter-list-window {
+    display: none;
+    position: fixed;
+    background-color: whitesmoke;
+    height: 300px;
+    width: 500px;
+    top: 10vh;
+    left: 37.7vw;
+    border-radius: 10px;
+    z-index: 1;
+}
+
+.filter-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.filter-button {
+    width: calc((100% - 60px) / 5);
+    height: 30px;
+    background-color: gray;
+    border: none;
+    border-radius: 5px;
+    font-size: 12px;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-left: 8px;
+    margin-right: 23px;
+    color: white;
+
+}
+
+/* Dodatkowe style dla efektu najechania na przycisk */
+.filter-button:hover {
+    background-color: gray;
+    color: white;
+}
+
+.filter-heading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.filter-heading-line {
+    flex-grow: 1;
+    height: 1px;
+    background-color: black;
+    margin: 0 10px;
+}
+
+.filter-button.selected {
+    background-color: orange;
+}
+
+
+
+/*Filter buttons style*/
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+}
+
+.button-container button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: 40px;
+    border: 2px solid gray;
+    border-radius: 20px;
+    background-color: white;
+    color: gray;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 40px ;
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+
+.button-container button:hover {
+    background-color: white;
+    color: #fc0202;
+    border-color: #fc0202;
+}
+
+
 
 /*Styling "no result message"*/
 
