--- a/style.css
+++ b/style.css
@@ -103,6 +103,61 @@ body {
     border-radius: 10%;
 }
 
+/*Rotating card*/
+.flip-container {
+    perspective: 1000px;
+    width: 280px;
+    height: 200px;
+    position: relative;
+}
+
+.flip-container:hover .card-image-wrapper {
+    /*transform: rotateY(180deg);*/
+}
+
+.card-image-wrapper {
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.card-image-front,
+.card-image-back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.card-image-front {
+    background-color: #c0c4bd;
+    border-radius: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.card-image-back {
+    background-color: #c0c4bd;
+    border-radius: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: rotateY(180deg);
+}
+
+.card-image-front img {
+    width: 100%;
+    height: auto;
+    border-radius: 15%;
+}
 /* button style */
 
 .button {
@@ -422,3 +477,6 @@ input#search-bar{
 .container::-webkit-scrollbar-thumb:hover {
     background: rgba(23,170,221,1);
 }
+
+/*BACK OF THE CARD*/
+
