--- a/css/main.css
+++ b/css/main.css
@@ -80,11 +80,70 @@
 }
 
 .modal-content {
-    background-color: #fefefe;
+    position: relative;
+    background: transparent;
+    width: 400px;
+    height: 440px;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 30%;
+    border: 2px solid #888;
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgb(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form-box {
+    width: 100%;
+    padding: 40px;
+
+}
+.form-box h2 {
+    font-size: 2em;
+    text-align: center;
+}
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid black;
+    margin: 30px 0;
+}
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+.input-box .icon {
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    line-height: 57px;
+    text-align: center;
+
+}
+input::placeholder {
+    color: transparent;
+}
+.input-text {
+    position: absolute;
+    top: 50%;
+    left: 7px;
+
+    font-size: 1em;
+    color: black;
+    font-weight: bold;
+    pointer-events: none;
+    transition: .5s;
+
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label {
+    top: -5px
 }
 
 .close-button {
