--- a/css/main.css
+++ b/css/main.css
@@ -78,8 +78,7 @@
     overflow: auto;
     background-color: rgba(0,0,0,0.4);
 }
-
-.modal-content {
+.modal-container {
     position: relative;
     background: transparent;
     width: 400px;
@@ -93,15 +92,58 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    transition: height .2s ease;
+
+
 }
+
+.modal-container.active {
+    height: 520px;
+}
+
 .form-box {
-    width: 100%;
+    box-sizing: border-box;
+    width: 380px;
     padding: 40px;
 
 }
+
+.modal-container .form-box.login {
+    /*transition: transform .18s ease;*/
+    transform: translateX(0);
+
+}
+
+.modal-container.active .form-box.login {
+    transition: none;
+    /*position: absolute;*/
+    transform: translateX(-450px);
+}
+
+.modal-container .form-box.register {
+    position: absolute;
+    /*width: 320px;*/
+    padding: 40px;
+    transition: none;
+    transform: translateX(450px);
+}
+
+.modal-container.active .form-box.register {
+    transition: none;
+    transform: translateX(0);
+}
+
 .form-box h2 {
     font-size: 2em;
     text-align: center;
+}
+
+.form-box .register {
+    position: absolute;
+    /*width: 460px;*/
+    transform: translateX(400px);
+
 }
 .input-box {
     position: relative;
@@ -116,6 +158,10 @@
     background: transparent;
     border: none;
     outline: none;
+    font-size: 1em;
+    color: black;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
 }
 .input-box .icon {
     position: absolute;
@@ -123,6 +169,7 @@
     font-size: 1.2em;
     line-height: 57px;
     text-align: center;
+
 
 }
 input::placeholder {
@@ -146,16 +193,70 @@ input::placeholder {
     top: -5px
 }
 
-.close-button {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+.remember-forgot {
+    font-size: .9em ;
+    color: black;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
 }
 
-.close-button:hover,
-.close-button:focus {
-    color: #000;
+.remember-forgot a {
+    color: black;
     text-decoration: none;
-    cursor: pointer;
 }
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.login-btn {
+    width: 100%;
+    height: 45px;
+    background: black;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: white;
+    font-weight: 500;
+}
+
+.login-register {
+    font-size: .9em;
+    color: black;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+
+.login-register p a {
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.login-register p a:hover {
+    text-decoration: underline;
+}
+
+.close-button {
+    position: absolute;
+    top: -11px;
+    right: -30px;
+    width: 45px;
+    height: 45px;
+    background: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    font-weight: bold;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
+
