--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon Game</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 
@@ -46,7 +46,7 @@
         <span class="button__text">Load More</span>
     </button>
 
-<script src="../js/app.js"></script>
+<script src="../public/js/app.js"></script>
 
 
 
