--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../public/css/main.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <header>
@@ -13,7 +13,7 @@
         </div>
         <div class="navbar-links">
             <a href="#" class="navbar-link">Play Game</a>
-            <a href="index.html" class="navbar-link">Pokedex</a>
+            <a href="index.ejs" class="navbar-link">Pokedex</a>
             <a href="#" class="navbar-link">Gallery</a>
             <a href="#" class="navbar-link">About</a>
         </div>
@@ -38,20 +38,20 @@
                     <ion-icon name="close"></ion-icon>
                 </span>
             <h2>Login</h2>
-            <form action="#">
+            <form action="/api/users/login" method="POST">
 
                 <div class="input-box">
                             <span class="icon">
                                 <ion-icon name="mail"></ion-icon>
                             </span>
-                    <input type="email" placeholder="Email" required>
+                    <input type="email" name="email" placeholder="Email" required>
                     <label class="input-text">Email</label>
                 </div>
                 <div class="input-box">
                             <span class="icon">
                                 <ion-icon name="lock-closed"></ion-icon>
                             </span>
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" name="password" placeholder="Password" required>
                     <label class="input-text">Password</label>
                 </div>
                 <div class="remember-forgot">
@@ -77,26 +77,26 @@
                 <ion-icon name="close"></ion-icon>
             </span>
             <h2>Registration</h2>
-            <form action="#">
+            <form action="/api/users/register" method="POST">
                 <div class="input-box">
                     <span class="icon">
                         <ion-icon name="person"></ion-icon>
                     </span>
-                    <input type="email" placeholder="Email" required>
+                    <input type="text" name="username" placeholder="Username" required>
                     <label class="input-text">Username</label>
                 </div>
                 <div class="input-box">
                     <span class="icon">
                         <ion-icon name="mail"></ion-icon>
                     </span>
-                    <input type="email" placeholder="Email" required>
+                    <input type="email"name="email" placeholder="Email" required>
                     <label class="input-text">Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon">
                         <ion-icon name="lock-closed"></ion-icon>
                     </span>
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" name="password" placeholder="Password" required>
                     <label class="input-text">Password</label>
                 </div>
                 <div class="remember-forgot">
@@ -115,7 +115,7 @@
 </div>
 
 
-<script src="../js/main.js"></script>
+<script src="../public/js/main.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
