--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
         <span class="button__text">Load More</span>
     </button>
 
-<script src="../public/js/app.js"></script>
+<script src="../public/js/app.ts"></script>
 
 
 
