Added .env file and started to implement MVC pattern.

--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../public/css/main.css">
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../../public/css/main.css">
+    <link rel="icon" type="image/x-icon" href="../../images/favicon.ico">
 </head>
 <header>
     <nav class="navbar">
         <div class="navbar-logo">
-            <img src="../main%20images/pokemon%20logo.png" alt="Logo">
+            <img src="../../main%20images/pokemon%20logo.png" alt="Logo">
         </div>
         <div class="navbar-links">
             <a href="#" class="navbar-link">Play Game</a>
@@ -25,7 +25,7 @@
 <body>
 <div class="video-container">
     <video autoplay loop muted>
-        <source src="../main%20images/videoplayback.mp4" type="video/mp4">
+        <source src="../../main%20images/videoplayback.mp4" type="video/mp4">
         <source src="video.webm" type="video/webm">
     </video>
 </div>
@@ -115,7 +115,7 @@
 </div>
 
 
-<script src="../public/js/main.js"></script>
+<script src="../../public/js/main.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
